refactor: Grade refac